# EduPulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt
.github/workflows/: build-images.yml
.omc/handoffs/: team-exec-phase1-to-phase2.md  team-exec-phase2-to-phase3+4.md  team-plan-to-exec.md
.omc/plans/: edupulse-backend.md  expand-synthetic-data-generators.md  frontend-enhancement-v2.md  frontend-mockup-3pages.md  frontend-plan.md  lstm-data-improvement.md  open-questions.md  search-volume-collectors.md  server-deploy-fixes.md
.sisyphus/evidence/: task-3-adapter-seams.md
alembic/: env.py
alembic/versions/: 001_initial.py  (+1 more)
docs/: EduPulse_전체_기능_정리.md  EduPulse_프로젝트_구조.md  ai_collaboration_index.md  architecture.md  data-and-model.md  frontend-integration.md  model_layer_refactoring.md  판단_기준_정리.md  페이지_사용_가이드.md  프론트엔드_백엔드_연동_가이드.md  합성_데이터_생성_가이드.md
edupulse/: __init__.py  config.py  constants.py  database.py
frontend/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
notebooks/: eda.ipynb  feature_engineering.ipynb  model_comparison.ipynb  model_experiments.ipynb  pipeline_test.ipynb
scripts/: deploy.sh  run_pipeline.py  seed_instructors.py  transfer_lstm.sh
tests/: conftest.py  test_collection.py  test_demand.py  test_generators.py  test_health.py  test_model.py  test_preprocessing.py  test_simulation.py
(+103 files in other folders)
